# FlappyBirdGameSFML

./: CMakeLists.txt  CONTRIBUTING.md  README.md
FlappyBird/: CMakeLists.txt  Main.cpp
FlappyBird/Util/: Assertion.h  FileIO.cpp  FileIO.h  Logger.cpp  Logger.h  Platform.h
